<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.softwareag.c8y.mqtt</groupId>
    <artifactId>mqtt-mapping-solution</artifactId>
    <version>1.109</version>
    <packaging>pom</packaging>

    <modules>
        <module>mqtt-mapping-service</module>
        <module>mqtt-mapping-interface</module>
        <module>mqtt-mapping-extension</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <c8y.version>1014.134.0</c8y.version>
        <lombok.version>1.18.24</lombok.version>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <spring-boot-dependencies.version>2.5.14</spring-boot-dependencies.version>
    </properties>

    <repositories>
        <repository>
            <id>cumulocity</id>
            <layout>default</layout>
            <url>https://download.cumulocity.com/maven/repository</url>
        </repository>
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <id>cumulocity</id>
            <layout>default</layout>
            <url>https://download.cumulocity.com/maven/repository</url>
        </pluginRepository>
    </pluginRepositories>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.nsn.cumulocity.clients-java</groupId>
                <artifactId>java-client</artifactId>
                <version>${c8y.version}</version>
            </dependency>
            <dependency>
                <groupId>com.nsn.cumulocity.clients-java</groupId>
                <artifactId>microservice-autoconfigure</artifactId>
                <version>${c8y.version}</version>
            </dependency>
            <dependency>
                <groupId>com.nsn.cumulocity.clients-java</groupId>
                <artifactId>microservice-dependencies</artifactId>
                <version>${c8y.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.nsn.cumulocity.model</groupId>
                <artifactId>device-capability-model</artifactId>
                <version>${c8y.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.protobuf</groupId>
                <artifactId>protobuf-java</artifactId>
                <version>3.21.9</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.paho</groupId>
                <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
                <version>1.2.5</version>
            </dependency>
            <dependency>
                <groupId>javax.validation</groupId>
                <artifactId>validation-api</artifactId>
                <version>1.1.0.Final</version>
            </dependency>
            <dependency>
                <groupId>com.ibm.jsonata4java</groupId>
                <artifactId>JSONata4Java</artifactId>
                <version>2.2.3</version>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>5.9.0</version>
            </dependency>

            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency> 
        </dependencies>
    </dependencyManagement>
</project>